# my_mprpc

./: CMakeLists.txt
example/: friend.proto  user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc  clleruserservice.cc
example/example/: friend.pb.cc  friend.pb.h
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  rpcheader.proto  rpcprovider.cc  zookeeperutil.cc
src/include/: lockqueue.h  logger.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  mprpccontroller.h  rpcprovider.h  zookeeperutil.h
src/src/: rpcheader.pb.cc  rpcheader.pb.h
test/protobuf/: a.out  main.cc  test.pb.cc  test.pb.h  test.proto
